crates/core-executor/src/tests/sql/logical_analyzer/casting/snapshots/date/query_to_date_cast_explicit_scalar.snap
---
source: crates/core-executor/src/tests/sql/logical_analyzer/casting/date.rs
description: "\"SELECT CAST('03-April-2024' AS DATE)\""
---
Ok(
    [
        "+-----------------------+",
        "| Utf8(\"03-April-2024\") |",
        "+-----------------------+",
        "| 2024-04-03            |",
        "+-----------------------+",
    ],
)
